	- unary_nd, indexed_function, isequivalent, _dbg, ssize not in AutoGrad any more.
	- fix KnetDisplay (summary line should show KnetArray).
	- separate and move KnetArray to KnetML.
	- reorganize unary.jl and broadcast.jl
	- check TODO.
	+ seed! gc dir -- just use the same names but have Knet versions.
	- data
	- deps
	- docs
	- examples
	- prof
	- src: CPU:20/20
	- test: CPU:11/14

2018-08-09  Deniz Yuret  <dyuret@ku.edu.tr>

	* broadcast: we override broadcast and broadcasted for Rec and KnetArray.
	- dot operations turn into broadcasted expressions.
	- Rec overrides broadcasted to call broadcast_r directly.
	- KnetArray should override broadcasted to call broadcast directly.

2017-09-06  EC2 Default User  <ec2-user@ip-172-31-24-9.us-east-2.compute.internal>

	* julia6-compat-todo:
	+ branches for cuarrays and gpu arrays
	+ checkout autograd master in travis
	+ need to figure out how to handle cat in autograd.
	+ notebooks, vgg. resnet, prof
	+ test autocad examples
	x test all examples on 4,5,6
	+ update news: autograd done, knet done.
	- go thru issues: autograd done, issues left.
	- branch for reversediff?
	- test on latest
	- speed test
	- examples/optimizers.jl too slow.
	- examples/charlm.jl does not pass gradcheck.
	- new autograd interface
	- broadcast without broadcast_func symbols


2017-09-01  EC2 Default User  <ec2-user@ip-172-31-10-154.us-east-2.compute.internal>

	* julia6-compat-todo:
			julia4	julia5	julia6
	kptr		1	1	1
	gpu		1	1	1
	distributions	1	1	1
	update		1	1	1
	karray		1	1	1
	linalg		1	1	1
	conv		1	1	1
	broadcast	1	1	1
	unary		1	1	1
	reduction	1	1	1

2017-07-29  dyuret  <dyuret@cn6.kuacc.ku.edu.tr>

	* julia6-compat-todo:
	- fix precompile warnings: WARNING: deprecated syntax "Expr(:ccall)". Use "Expr(:call, :ccall)" instead.
	- Pkg.test passes: kptr, gpu, distributions, conv
	- fix Pkg.test warnings: linalg
	- fix Pkg.test errors: update, karray, broadcast, reduction, unary
	- fix Pkg.build errors: Pkg.build does not work.
