@@ -1,15 +1,13 @@
 # reduction.jl: Array->Scalar and Array->Vector reductions.
 
-import Base: sum, prod, minimum, maximum
+import Base: sum, prod, minimum, maximum # , countnz
+import LinearAlgebra: norm
+import Statistics: mean
 
-# countnz: deprecated reimplement using count(!iszero...)
-
-# import AutoGrad: sumabs_, sumabs2_, minabs_, maxabs_
-Base.sum(::typeof(abs), x::KnetArray, d...) = sumabs_(x,d...);
-Base.sum(::typeof(abs2), x::KnetArray, d...) = sumabs2_(x,d...);
-Base.maximum(::typeof(abs), x::KnetArray, d...) = maxabs_(x,d...);
-Base.minimum(::typeof(abs), x::KnetArray, d...) = minabs_(x,d...);
-reduced_dims_compat(dims,region)=map(last, Base.reduced_indices(map(Base.OneTo, dims), region))
+sum(::typeof(abs), x::KnetArray; dims=:) = sumabs(x,dims=dims);
+sum(::typeof(abs2), x::KnetArray; dims=:) = sumabs2(x,dims=dims);
+maximum(::typeof(abs), x::KnetArray; dims=:) = maxabs(x,dims=dims);
+minimum(::typeof(abs), x::KnetArray; dims=:) = minabs(x,dims=dims);
 
 reduction_ops = [
 # The entry format is (cudaname, julianame, merge, item, init)
@@ -18,12 +16,14 @@ reduction_ops = [
 ("prod","prod","ai*xi","xi","1"),
 ("maximum","maximum","(ai>xi ? ai : xi)","xi","(-INFINITY)"),
 ("minimum","minimum","(ai<xi ? ai : xi)","xi","INFINITY"),
-("sumabs","sumabs_","ai+xi","(xi<0 ? -xi : xi)","0"),
-("sumabs2","sumabs2_","ai+xi","(xi*xi)","0"),
-("maxabs","maxabs_","(ai>xi ? ai : xi)","(xi<0 ? -xi : xi)","0"),
-("minabs","minabs_","(ai<xi ? ai : xi)","(xi<0 ? -xi : xi)","INFINITY"),
+("sumabs","sumabs","ai+xi","(xi<0 ? -xi : xi)","0"),
+("sumabs2","sumabs2","ai+xi","(xi*xi)","0"),
+("maxabs","maxabs","(ai>xi ? ai : xi)","(xi<0 ? -xi : xi)","0"),
+("minabs","minabs","(ai<xi ? ai : xi)","(xi<0 ? -xi : xi)","INFINITY"),
 ("countnz","countnz","ai+xi","(xi!=0)","0"),
 ]
+
+reduced_dims_compat(dims,region)=map(last, Base.reduced_indices(map(Base.OneTo, dims), region))
 
 function reduction_op(f, j=f, o...)
     J=Symbol(j)
@@ -34,16 +34,14 @@ function reduction_op(f, j=f, o...)
         F21 = "$(f)_$(S)_21"
         F22 = "$(f)_$(S)_22"
         @eval begin
-            # Array->Scalar reduction:
-            function $J(x::KnetArray{$T})
-                y=ccall(($F20,$libknet8),$T,(Cint,Ptr{$T}),length(x),x) # do not use @knet8, return not Nothing
-                @gs; return y
-            end
-            # Array->Vector reduction:
-            function $J(x::KnetArray{$T}, region)
-                rdims = reduced_dims_compat(size(x), region)
-                vdims = ndims(x)-length(region)
-                if length(region) != 1 || ndims(x) == 1
+            function $J(x::KnetArray{$T}; dims=:)
+                if dims == Colon()
+                    y=ccall(($F20,$libknet8),$T,(Cint,Ptr{$T}),length(x),x) # do not use @knet8, return not Nothing
+                    @gs; return y
+                end
+                rdims = reduced_dims_compat(size(x), dims)
+                vdims = ndims(x)-length(dims)
+                if length(dims) != 1 || ndims(x) == 1
                     vdims = count(x->x>1,rdims)
                 end
                 if vdims == 0   # falls back to Array->Scalar reduction
@@ -51,10 +49,10 @@ function reduction_op(f, j=f, o...)
                 elseif vdims == 1
                     i0 = 0
                     ysize = ntuple(ndims(x)) do i
-                        if in(i,region)
+                        if in(i,dims)
                             1
                         elseif i0>0
-                            error("Bad region $region")
+                            error("Bad dims $dims")
                         else
                             i0=i
                             size(x,i)
@@ -66,17 +64,17 @@ function reduction_op(f, j=f, o...)
                     return y
                 elseif vdims == ndims(x)-1
                     y = similar(x, rdims)
-                    d = region[1]
+                    d = dims[1]
                     nx = length(x); ny = length(y); s1 = stride(x,d)
                     s2 = stride(x,d+1); xd1 = size(x,d)-1
                     @knet8($F22,(Cint,Cint,Ptr{$T},Cint,Cint,Cint,Ptr{$T}),
                                  nx, xd1, x, s1, s2, ny, y)
                     return y
                 else
-                    y = $J(x,region[1])
+                    y = $J(x,dims[1])
                     f = $J==sumabs2 ? sum : $J
-                    for k=2:length(region)
-                        y = f(y,region[k])
+                    for k=2:length(dims)
+                        y = f(y,dims[k])
                     end
                     return y
                 end
@@ -89,14 +87,6 @@ for f in reduction_ops
     if !isa(f,Tuple); f=(f,); end
     reduction_op(f...)
 end
-
-@zerograd countnz(a,d...)
-
-# Norm primitives:
-
-# import Base.LinAlg: norm, vecnorm
-using LinearAlgebra
-import LinearAlgebra: norm
 
 function norm(x::KnetArray{T}, p::Real=2) where {T}
     if length(x) == 0
@@ -116,8 +106,9 @@ function norm(x::KnetArray{T}, p::Real=2) where {T}
     end
 end
 
-import Statistics: mean
-
-mean(a::Union{T, Rec{T}}) where {T<:KnetArray} = sum(a) / length(a)
-mean(a::Union{T, Rec{T}}, r) where {T<:KnetArray} = (b=sum(a,r); (b*convert(eltype(b),length(b)/length(a))))
+mean(a::Union{T, Rec{T}};dims=:) where {T<:KnetArray} = sum(a,dims=dims) .* convert(eltype(b), length(b)/length(a))
 mean(f::Function, a::Union{T, Rec{T}}) where {T<:KnetArray} = sum(f, a) / length(a)
+
+# TODO: move these to AutoGrad
+# @zerograd count(x::KnetArray)
+# @zerograd count(pred, x::KnetArray)
