@@ -16,6 +16,8 @@
 	- prof
 	- src: CPU:20/20
 	- test: CPU:11/14
+	- limit max memory allocated by kptr
+	- AutoGrad only uses broadcasted now, compare performance with using broadcast
 
 2018-08-09  Deniz Yuret  <dyuret@ku.edu.tr>
 
